--- a/config/params.toml
+++ b/config/params.toml
@@ -9,11 +9,12 @@ colorScheme = "congo"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
-enableSearch = true
-enableCodeCopy = true
+defaultThemeColor = "#FFFFFF"
+
+enableSearch = false
+enableCodeCopy = false
 enableImageLazyLoading = true
 enableImageWebp = true
-enableQuicklink = true
 
 # robots = ""
 fingerprintAlgorithm = "sha256"
@@ -27,39 +28,39 @@ fingerprintAlgorithm = "sha256"
 [footer]
   showCopyright = true
   showThemeAttribution = true
-  showAppearanceSwitcher = true
+  showAppearanceSwitcher = false
   showScrollToTop = true
 
 [homepage]
-  layout = "custom" # valid options: page, profile, custom
-  showRecent = true
+  layout = "page" # valid options: page, profile, custom
+  showRecent = false
   recentLimit = 5
 
 [article]
   showDate = true
   showDateUpdated = false
   showAuthor = true
-  showBreadcrumbs = true
+  showBreadcrumbs = false
   showDraftLabel = true
-  showEdit = true
-  editURL = "https://github.com/jpanther/congo/tree/dev/exampleSite/content/"
+  showEdit = false
+  # editURL = "https://github.com/username/repo/"
   editAppendPath = true
   showHeadingAnchors = true
   showPagination = true
   invertPagination = false
   showReadingTime = true
-  showTableOfContents = true
+  showTableOfContents = false
   showTaxonomies = false
   showWordCount = false
   showComments = false
   # sharingLinks = ["facebook", "x-twitter", "mastodon", "pinterest", "reddit", "linkedin", "email", "threads", "telegram", "line", "weibo", "xing", "bluesky"]
 
 [list]
-  showBreadcrumbs = true
+  showBreadcrumbs = false
   showSummary = false
-  showTableOfContents = true
+  showTableOfContents = false
   showTaxonomies = false
-  groupByYear = false
+  groupByYear = true
   paginationWidth = 1
 
 [sitemap]
@@ -71,9 +72,14 @@ fingerprintAlgorithm = "sha256"
 [fathomAnalytics]
   # site = "ABC12345"
 
+[plausibleAnalytics]
+  # domain = "blog.yoursite.com"
+  # event = ""
+  # script = ""
+
 #[umamiAnalytics]
 #  site = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-#  region = "eu"  # Can be either "eu" or "us"
+#  region = "eu"  # can be either "eu" or "us"
 
 [verification]
   # google = ""
