Remove downloaded images from repo and add to .gitignore

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -55,6 +55,13 @@ summaryLength = 0
   url = "/truck-services/"
   weight = 3
 
+
+  [[menu.main]]
+  identifier = "gallery"
+  name = "Gallery"
+  url = "/gallery/"
+  weight = 4
+
   [[menu.main]]
   identifier = "car-repair"
   name = "Car Repair"
