moved image group extractor code

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ resources/
 .DS_Store
 # Ignore downloaded image sliders
 static/images/rv-service/
+wordpress/static
+/utility/static/
+utility/static/
