--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/congo"]
 	path = themes/congo
 	url = git@github.com:jpanther/congo.git
+[submodule "themes/hugo-arcana"]
+	path = themes/hugo-arcana
+	url = https://github.com/half-duplex/hugo-arcana.git
