--- a/hugo.toml
+++ b/hugo.toml
@@ -6,7 +6,7 @@
 baseURL = 'http://localhost:1313/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = "congo"
+theme = "hugo-arcana"
 
 
 
