--- a/data/swipers/rv-service.yaml
+++ b/data/swipers/rv-service.yaml
@@ -1,6 +1,6 @@
 swiper_images_1:
   header: "Body Damage"
-  description: "From dents to major repairs, our team brings your vehicle back to pristine condition."
+  description: "From minor bumps to major accidents, our skilled technicians restore your RV to its pristine condition. This includes aluminum, Composites and steel repairs."
   images:
     - "/images/rv-service/slider_1/IMG_0011-7.jpg"
     - "/images/rv-service/slider_1/IMG_0011.jpg"
@@ -16,8 +16,8 @@ swiper_images_1:
 
 
 swiper_images_2:
-  header: "RV Structure Repair"
-  description: "Structural services to restore your RV’s integrity and safety."
+  header: "Refinishing"
+  description: "Expert PPG refinishing team will restore your paint to it’s original beauty, or create a new look altogether."
   images:
     - "/images/rv-service/slider_2/IMG_0002-24-1.jpg"
     - "/images/rv-service/slider_2/IMG_0527-1024x682.jpg"
@@ -27,22 +27,22 @@ swiper_images_2:
     - "/images/rv-service/slider_2/IMG_8250-1024x682.jpg"
 
 swiper_images_3:
-  header: "Roof Repair"
-  description: "Leak-proof solutions to protect your RV from the elements."
+  header: "Roof Repairs"
+  description: "Expert repairs to ensure your RV’s structural integrity and safety including replacement, repairs and re-sealing."
   images:
     - "/images/rv-service/slider_3/roofRepair.jpg"
 
 swiper_images_4:
-  header: "Plumbing Services"
-  description: "Complete plumbing repairs and installations for all RV models."
+  header: "Plumbing Repairs"
+  description: "Swift and reliable solutions for any plumbing issues to keep your water systems running smoothly. This includes water storage and waste holding system repairs."
   images:
     - "/images/rv-service/slider_4/RVWasteTank.jpg"
     - "/images/rv-service/slider_4/plumbing-1024x683.jpg"
     - "/images/rv-service/slider_4/rvplumbing2.jpg"
 
 swiper_images_5:
-  header: "Interior Renovation"
-  description: "Modernize and refresh your RV's interior with our custom upgrades."
+  header: "Interior Decor"
+  description: "Cabinets, window coverings, flooring, lighting, audio devices, and furniture."
   images:
     - "/images/rv-service/slider_5/IMG_2280-1024x682.jpg"
     - "/images/rv-service/slider_5/IMG_2456.jpg"
@@ -50,15 +50,20 @@ swiper_images_5:
     - "/images/rv-service/slider_5/IMG_2875-1024x682.jpg"
 
 swiper_images_6:
-  header: "Exterior Features"
-  description: "From steps to lighting we install and repair essential RV accessories."
+  header: "Exterior Amenities"
+  description: "Awnings, lights, backup cameras, entry steps, rock chip guards and film, slide outs, and windshields and windows"
   images:
     - "/images/rv-service/slider_6/DSCN1869-1024x768.jpg"
     - "/images/rv-service/slider_6/DSCN1870-1024x768.jpg"
+    - "/images/rv-service/slider_6/EntrySteps-1024x1014.jpg"
+    - "/images/rv-service/slider_6/IMG_0948.jpg"
+    - "/images/rv-service/slider_6/RVLights-1024x1019.jpg"
+    - "/images/rv-service/slider_6/american-rv-1024x573.jpg"
+    - "/images/rv-service/slider_6/backupCamera.jpg"
 
 swiper_images_7:
-  header: "Appliance Upgrades"
-  description: "Install or repair stoves, AC units, water heaters, and more."
+  header: "Electrical Repairs and Upgrades"
+  description: "Including A/C, furnace, and water heaters, refrigerators, ovens, stoves, and alarms enhancing comfort and convenience during your travels. BEAR is a Dometic Authorized dealer."
   images:
     - "/images/rv-service/slider_7/Dometic-AC-2-1024x1024.png"
     - "/images/rv-service/slider_7/GE-RV-stove-1.jpg"
@@ -68,8 +73,8 @@ swiper_images_7:
     - "/images/rv-service/slider_7/dometic-water-heater-1024x1024.png"
 
 swiper_images_8:
-  header: "Restoration Projects"
-  description: "Before-and-after transformations from vintage to stunning."
+  header: "Custom Vinyl & Paint Graphic Designs"
+  description: "Personalize your RV to reflect your style and personality with our custom designs. This also includes diamond shields and chip protectors."
   images:
     - "/images/rv-service/slider_8/100_1424-1024x768.jpg"
     - "/images/rv-service/slider_8/IMG_0003_2-2-1024x768.jpg"
@@ -80,8 +85,8 @@ swiper_images_8:
     - "/images/rv-service/slider_8/dolphinRVBefore.jpg"
 
 swiper_images_9:
-  header: "Certifications & Insurance"
-  description: "We work with top brands and are certified by trusted partners."
+  header: "Insurance Claim Specialist"
+  description: "We are a preferred repair center with major insurance companies, handling claims efficiently to minimize downtime for your RV."
   images:
     - "/images/rv-service/slider_9/BarLicensed2.png"
     - "/images/rv-service/slider_9/IcarCerfied.png"
@@ -91,8 +96,8 @@ swiper_images_9:
     - "/images/rv-service/slider_9/ppgCertified.png"
 
 swiper_images_10:
-  header: "Custom Fabrication"
-  description: "We tailor your vehicle with fabricated parts for performance, safety, and style."
+  header: "Local Sourcing Fabrication"
+  description: "Custom or hard-to-find parts fabricated quickly to get you back on the road without delay."
   images:
     - "/images/rv-service/slider_10/Custom_fabricating-commercial-vehicles_sm-500x400-1.jpg"
     - "/images/rv-service/slider_10/IMG_4770-600x1024.jpg"
@@ -100,8 +105,8 @@ swiper_images_10:
     - "/images/rv-service/slider_10/fabrication-1024x682.jpg"
 
 swiper_images_11:
-  header: "Sand Blasting"
-  description: "Prep your surfaces for restoration or repainting with precision sandblasting."
+  header: "Large Facility"
+  description: "Equipped to accommodate even the largest buses and RVs, ensuring ample space for comprehensive repairs."
   images:
     - "/images/rv-service/slider_11/1-768x576-1.jpg"
     - "/images/rv-service/slider_11/IMG_1868-2-1024x682.jpg"
@@ -109,17 +114,15 @@ swiper_images_11:
     - "/images/rv-service/slider_11/sand_blasting_small-1024x727.jpg"
 
 swiper_images_12:
-  header: "Detailing Services"
-  description: "Full interior and exterior detailing to make your RV shine like new."
+  header: "Detailing and Cleaning"
+  description: "First-class detailing services and deep cleaning for impeccable maintenance of your RV’s interior."
   images:
     - "/images/rv-service/slider_12/beautiful-car-interior-clean-up-service-683x1024.jpg"
     - "/images/rv-service/slider_12/beautiful-car-polishing-service-1024x683.jpg"
     - "/images/rv-service/slider_12/close-up-car-care-process-1024x683.jpg"
 
 swiper_images_13:
-  header: "Brand Identity"
-  description: "Proud partners and service providers recognized across the industry."
+  header: "Secure Storage"
+  description: "Our gated and locked facility provides a secure environment for your RV."
   images:
-    - "/images/rv-service/slider_13/bearCircleBLACK-1.png"
-    - "/images/rv-service/slider_13/birdeyeLogoRed.png"
     - "/images/rv-service/slider_13/shop_front-1024x682.jpg"
