--- a/hugo.toml
+++ b/hugo.toml
@@ -1,36 +1,7 @@
-# -- Site Configuration --
-# Refer to the theme docs for more details about each of these parameters.
-# https://jpanther.github.io/congo/docs/getting-started/
-
-# baseURL = "https://your_domain.com/"
-# baseURL = 'http://localhost:1313/'
 baseURL = "https://cabear.com/hugo/"
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "hugo-arcana"
-
-defaultContentLanguage = "en"
-
-enableRobotsTXT = true
-summaryLength = 0
-
-[pagination]
-  pagerSize = 10
-
-[outputs]
-  home = ["HTML", "RSS", "JSON"]
-
-[privacy]
-  [privacy.vimeo]
-    enableDNT = true
-  [privacy.x]
-    enableDNT = true
-  [privacy.youTube]
-    privacyEnhanced = true
-
-[services]
-  [services.x]
-    disableInlineCSS = true
 
 [menu]
   [[menu.main]]
@@ -40,27 +11,26 @@ summaryLength = 0
   weight = 1
 
   [[menu.main]]
-  identifier = "rv-repair"
   name = "RV Repair"
-  url = "rv-repair/"
+  url = "/rvrepair/"
   weight = 2
 
   [[menu.main]]
   identifier = "truck-services"
   name = "Truck Repair"
-  url = "truck-services/"
+  url = "/truck-services/"
   weight = 3
 
   [[menu.main]]
   identifier = "gallery"
   name = "Gallery"
-  url = "gallery/"
+  url = "/gallery/"
   weight = 4
 
   [[menu.main]]
   identifier = "sandblasting"
   name = "Sandblasting"
-  url = "media-sandblasting/"
+  url = "/media-sandblasting/"
   weight = 5
 
   [[menu.main]]
@@ -72,7 +42,7 @@ summaryLength = 0
   [[menu.main]]
   identifier = "frame-repair"
   name = "Frame Repair"
-  url = "frame-repair/"
+  url = "/frame-repair/"
   weight = 7
 
   [[menu.main]]
@@ -98,9 +68,3 @@ summaryLength = 0
   name = "Contact"
   url = "/contact/"
   weight = 11
-
-[build]
-  writeStats = true
-  useResourceCacheWhen = "always"
-
-[markup]
