--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:1313"
+baseURL = "http://localhost:1313/"
 # baseURL = "https://cabear.com/hugo/"
 languageCode = 'en-us'
 title = 'My New Hugo Site'
@@ -7,7 +7,7 @@ theme = "hugo-arcana"
 [menu]
   [[menu.main]]
   name = "Welcome"
-  url = "/"
+  url = "/home/"
   weight = 1
 
   [[menu.main]]
