--- a/data/swipers/truck-service.yaml
+++ b/data/swipers/truck-service.yaml
@@ -1,7 +1,6 @@
 swiper_images_1:
   header: Class A Truck and Bus Service
-  description: Collision repairs, Frame repairs, ,Composites, aluminum and steel repairs
-Painting and re-imaging
+  description: Collision repairs, Frame repairs, ,Composites, aluminum and steel repairs, Painting and re-imaging
   images:
   - images/truck-service/slider_1/painting-the-bus.jpg
   - images/truck-service/slider_1/MG_0284.jpg
