--- a/hugo.toml
+++ b/hugo.toml
@@ -43,6 +43,14 @@ theme = "hugo-arcana"
 
 
   [[menu.main]]
+  identifier = "contact"
+  name = "Contact Us"
+  url = "/contact-us/"
+  weight = 11
+
+
+
+  [[menu.main]]
   identifier = "welding"
   name = "Welding"
   url = "/welding/"
@@ -71,12 +79,6 @@ theme = "hugo-arcana"
   name = "Stencil Painting"
   url = "/stencil-painting/"
   weight = 10
-
-  [[menu.main]]
-  identifier = "contact"
-  name = "Contact"
-  url = "/contact/"
-  weight = 11
 
 
 [markup]
