--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,5 @@
+# /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/hugo.toml
+
 baseURL = "http://localhost:1313/"
 # baseURL = "https://cabear.com/hugo/"
 languageCode = 'en-us'
