--- a/hugo.toml
+++ b/hugo.toml
@@ -21,25 +21,25 @@ theme = "hugo-arcana"
     [[menu.main]]
     parent = "rv"
     name = "RV Upgrades"
-    url = "/rv-upgrades/"
+    url = "/rv-repair/rv-upgrades/"
     weight = 1
 
     [[menu.main]]
     parent = "rv"
     name = "RV Maintenance"
-    url = "/rv-maintenance/"
+    url = "/rv-repair/rv-maintenance/"
     weight = 2
 
     [[menu.main]]
     parent = "rv"
     name = "RV Collision Repair"
-    url = "/rv-collision-repair/"
+    url = "/rv-repair/rv-collision-repair/"
     weight = 3
 
     [[menu.main]]
     parent = "rv"
     name = "Motorhome Collision Repair"
-    url = "/motorhome-collision-repair/"
+    url = "/rv-repair/motorhome-collision-repair/"
     weight = 4
 
   # Heavy Truck
@@ -52,19 +52,19 @@ theme = "hugo-arcana"
     [[menu.main]]
     parent = "heavy-truck"
     name = "Truck Collision Repair"
-    url = "/truck-collision-repair/"
+    url = "/truck-repair/truck-collision-repair/"
     weight = 1
 
     [[menu.main]]
     parent = "heavy-truck"
     name = "Heavy Equipment Refinishing"
-    url = "/heavy-duty-construction-equipment-refinishing/"
+    url = "/truck-repair/heavy-duty-construction-equipment-refinishing/"
     weight = 2
 
     [[menu.main]]
     parent = "heavy-truck"
     name = "Truck Body Repair"
-    url = "/truck-body-repair/"
+    url = "/truck-repair/truck-body-repair/"
     weight = 3
 
   # Trailer
@@ -77,7 +77,7 @@ theme = "hugo-arcana"
     [[menu.main]]
     parent = "trailer"
     name = "Lift Gate Installation"
-    url = "/lift-gate-installation/"
+    url = "/trailer-repair//lift-gate-installation/"
     weight = 1
 
   # Vehicles
@@ -90,13 +90,13 @@ theme = "hugo-arcana"
     [[menu.main]]
     parent = "vehicles"
     name = "Frame Repair"
-    url = "/frame-repair/"
+    url = "/auto-body-repair-shop/frame-repair/"
     weight = 1
 
     [[menu.main]]
     parent = "vehicles"
     name = "Restoration"
-    url = "/restoration/"
+    url = "/auto-body-repair-shop/restoration/"
     weight = 2
 
   # Quality Services
@@ -154,19 +154,19 @@ weight = 6
   [[menu.main]]
   parent = "utility"
   name = "Disposal Truck Refinishing"
-  url = "/disposal-truck-refinishing/"
+  url = "/specialty-utility-bodies/disposal-truck-refinishing/"
   weight = 1
 
   [[menu.main]]
   parent = "utility"
   name = "Concrete Pump Truck Refinishing"
-  url = "/concrete-pump-truck-refinishing/"
+  url = "/specialty-utility-bodies/concrete-pump-truck-refinishing/"
   weight = 2
 
   [[menu.main]]
   parent = "utility"
   name = "Fleet Sandblasting & Priming"
-  url = "/fleet-sandblasting/"
+  url = "/specialty-utility-bodies/fleet-sandblasting/"
   weight = 3
 
 
