--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,6 @@
-baseURL = "http://localhost:1313/"
+# baseURL = "http://localhost:1313/"
+baseURL = "https://cabear.com/hugo/"
+
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "hugo-arcana"
