--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.125.4'
+          extended: true
 
       - name: Build site
         run: hugo --baseURL "https://cabear.com/hugo/"
