--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 # baseURL = "http://localhost:1313/"
-baseURL = "https://cabear.com/hugo/"
+baseURL = "https://cabear.com/"
 
 languageCode = 'en-us'
 title = 'My New Hugo Site'
