convert welcome .jpg to webp

--- a/data/swipers/home.yaml
+++ b/data/swipers/home.yaml
@@ -2,9 +2,9 @@ swiper_images_1:
   header: "Body Damage"
   description: "From minor bumps to major accidents, our skilled technicians restore your RV to its pristine condition. This includes aluminum, Composites and steel repairs."
   images:
-    - "images/welcome/slider_1/RV-Motorhome-Collision-Repair-1024x680.jpg"
-    - "images/welcome/slider_1/Tractor-Trailer-Collision-Repair-1024x640.jpg"
-    - "images/welcome/slider_1/camaro-ss.jpg"
+    - "images/welcome/slider_1/RV-Motorhome-Collision-Repair-1024x680.webp"
+    - "images/welcome/slider_1/Tractor-Trailer-Collision-Repair-1024x640.webp"
+    - "images/welcome/slider_1/camaro-ss.webp"
 
 
 
